--- a/birthday wish/package.json
+++ b/birthday wish/package.json
@@ -16,18 +16,18 @@
     },
     "repository": {
       "type": "git",
-      "url": "git+https://github.com/faahim/happy-birthday.git"
+      "url": "git+https://github.com/Shuklasn96/Birthday-Wish.git"
     },
     "keywords": [
       "Happy",
       "Birthday"
     ],
-    "author": "Afiur Rahman Fahim",
-    "modification": "GovindCodes",
-    "license": "MIT",
+    "author": "Shivnarayan Shukla",
+    "modification": "Shivnarayan",
+    "license": "Shiv",
     "bugs": {
-      "url": "https://github.com/faahim/happy-birthday/issues"
+      "url": "https://github.com/Shuklasn96/Birthday-Wish.git"
     },
-    "homepage": "https://github.com/faahim/happy-birthday#readme",
+    "homepage": "https://github.com/Shuklasn96/Birthday-Wish.git",
     "dependencies": {}
   }
